# aidw

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: design.md
docs/plans/: 12-move-plan-files-to-docs-plans-slug-md.md  13-clean-up-documentation.md  15-i-want-to-clean-up-the-notion-feature-entirely-it-isn-t-need.md  16-i-want-to-clean-up-the-notion-feature-entirely-it-isn-t-need.md
prompts/: iterate.md  refine.md
src/aidw/: __init__.py  cli.py  env.py
src/aidw/commands/: __init__.py  base.py  build.py  codereview.py  iterate.py  oneshot.py  plan.py  refine.py  scope.py
src/aidw/database/: __init__.py  db.py  models.py
src/aidw/github/: __init__.py  client.py  context.py  progress.py
src/aidw/prompts/: build.md  codereview.md  context.md  iterate.md  oneshot.md  plan.md  refine.md  scope.md
src/aidw/sandbox/: __init__.py  auth.py  executor.py  files.py  git.py  manager.py
src/aidw/server/: __init__.py  app.py  security.py  webhook.py
tests/: __init__.py  test_app.py
